--- a/Projeto1/projeto1.html
+++ b/Projeto1/projeto1.html
@@ -124,6 +124,8 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#vetores-e-matrizes" id="toc-vetores-e-matrizes" class="nav-link active" data-scroll-target="#vetores-e-matrizes"> <span class="header-section-number">1.1</span> Vetores e Matrizes</a></li>
   <li><a href="#leitura-e-escrita" id="toc-leitura-e-escrita" class="nav-link" data-scroll-target="#leitura-e-escrita"> <span class="header-section-number">1.2</span> Leitura e Escrita</a></li>
   <li><a href="#estrutura-de-repetição" id="toc-estrutura-de-repetição" class="nav-link" data-scroll-target="#estrutura-de-repetição"> <span class="header-section-number">1.3</span> Estrutura de Repetição</a></li>
+  <li><a href="#trigonometria" id="toc-trigonometria" class="nav-link" data-scroll-target="#trigonometria"> <span class="header-section-number">1.4</span> Trigonometria</a></li>
+  <li><a href="#resistores-em-série" id="toc-resistores-em-série" class="nav-link" data-scroll-target="#resistores-em-série"> <span class="header-section-number">1.5</span> Resistores em Série</a></li>
   </ul>
 </nav>
     </div>
@@ -155,10 +157,12 @@ ul.task-list li input[type="checkbox"] {
 <p>É muito difícil você fazer Física sem usar vetores ou matrizes, por isso você precisa dominar operações básicas de Algebra Linear.</p>
 <ol type="1">
 <li><p>Dados 3 vetores <span class="math inline">\(\vec{a} = (1,-1,1)\)</span>, <span class="math inline">\(\vec{b} = (-3,1,5)\)</span> e <span class="math inline">\(\vec{c} = (4,-7,3)\)</span> :</p>
-<p>1.1. Calcule a norma (valor absoluto Euclidiano) de cada vetor.</p>
-<p>1.2. Calcule o produto escalar e vetorial entre todas as combinações de <span class="math inline">\(\vec{a},\vec{b}\)</span> e <span class="math inline">\(\vec{c}\)</span>.</p>
-<p>1.3. Calcule o ângulo entre os vetores <span class="math inline">\(\vec{ab}\)</span> e <span class="math inline">\(\vec{ac}\)</span>.</p>
-<p>1.4. Crie a matriz <span class="math inline">\(A = [\vec{a}\; \vec{b}\; \vec{c}]\)</span> e calcule seu determinante.</p></li>
+<ol type="a">
+<li><p>Calcule a norma (valor absoluto Euclidiano) de cada vetor.</p></li>
+<li><p>Calcule o produto escalar e vetorial entre todas as combinações de <span class="math inline">\(\vec{a},\vec{b}\)</span> e <span class="math inline">\(\vec{c}\)</span>.</p></li>
+<li><p>Calcule o ângulo entre os vetores <span class="math inline">\(\vec{ab}\)</span> e <span class="math inline">\(\vec{ac}\)</span>.</p></li>
+<li><p>Crie a matriz <span class="math inline">\(A = [\vec{a}\; \vec{b}\; \vec{c}]\)</span> e calcule seu determinante.</p></li>
+</ol></li>
 </ol>
 </section>
 <section id="leitura-e-escrita" class="level2" data-number="1.2">
@@ -166,21 +170,77 @@ ul.task-list li input[type="checkbox"] {
 <p>Outra tarefa recorrente em programação é leitura de dados em arquivo para posterior análise.</p>
 <ol start="2" type="1">
 <li><p>Voltaremos aos tempos de ensino médio, e vamos calcular tempo de queda livre <span class="math inline">\(t_q = \sqrt{2h/g}\)</span>, porém não apenas na Terra.</p>
-<p>2.1. Pesquise o valor da aceleração da gravidade, <span class="math inline">\(g\)</span>, em diferentes planetas do sistema solar. Salve seus resultados em um arquivo <code>.txt</code>, cuja primeira coluna é o nome do planeta, e na segunda o valor de <span class="math inline">\(g\)</span>. Separe os dados com uma vírgula.</p>
-<p>2.2. Use o pacote <code>DelimitedFiles.jl</code> para ler os dados em uma matriz.</p>
-<p>2.3. Para cada planeta, calcule quanto tempo um objeto demora para atingir o solo, dado que a altura inicial é <span class="math inline">\(h=120 m\)</span>.</p>
-<p>2.4. Por meio de interpolação de texto, exiba seus resultados como: <code>"[planeta]: tempo de queda é [tempo] segundos"</code>.</p>
-<p>2.5. Use funções padrões de Julia, e descubra qual o planeta que demora <em>mais</em> e <em>menos</em> tempo para a queda acontecer.</p></li>
+<ol type="a">
+<li><p>Pesquise o valor da aceleração da gravidade, <span class="math inline">\(g\)</span>, em diferentes planetas do sistema solar. Salve seus resultados em um arquivo <code>.txt</code>, cuja primeira coluna é o nome do planeta, e na segunda o valor de <span class="math inline">\(g\)</span>. Separe os dados com uma vírgula.</p></li>
+<li><p>Use o pacote <code>DelimitedFiles.jl</code> para ler os dados em uma matriz.</p></li>
+<li><p>Para cada planeta, calcule quanto tempo um objeto demora para atingir o solo, dado que a altura inicial é <span class="math inline">\(h=120 m\)</span>.</p></li>
+<li><p>Por meio de interpolação de texto, exiba seus resultados como: <code>"[planeta]: tempo de queda é [tempo] segundos"</code>.</p></li>
+<li><p>Use funções padrões de Julia, e descubra qual o planeta que demora <em>mais</em> e <em>menos</em> tempo para a queda acontecer.</p></li>
+</ol></li>
 </ol>
 </section>
 <section id="estrutura-de-repetição" class="level2" data-number="1.3">
 <h2 data-number="1.3" class="anchored" data-anchor-id="estrutura-de-repetição"><span class="header-section-number">1.3</span> Estrutura de Repetição</h2>
 <ol start="3" type="1">
 <li><p>Ignorando um gama gigantesca de fatores, vamos assumir, o cenário irrealístico, de que a temperatura anual de uma cidade na região Sudeste do Brasil é descrito por uma função cosseno, cuja miníma anual é 5°, e máxima anual é 35°, acontecendo no primeiro dia do Verão, dia 21 de dezembro (que corresponde ao 355° dia do ano).</p>
-<p>3.1. Crie uma função que simule o comportamento de temperatura anual<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>.</p>
-<p>3.1. Vamos trabalhar as datas como índices. Crie um vetor com todos os números de 1 até 365.</p>
-<p>3.1. Calcule a temperatura anual usando <code>for</code>, <code>map</code> e o operador <code>broadcasting</code>, representado por um ponto <code>"."</code></p>
-<p>3.1. Crie uma figura com seu resultado, usando o pacote <code>Plots.jl</code>.</p></li>
+<ol type="a">
+<li><p>Crie uma função que simule o comportamento de temperatura anual.</p></li>
+<li><p>Vamos trabalhar as datas como índices. Crie um vetor com todos os números de 1 até 365.</p></li>
+<li><p>Calcule a temperatura anual usando <code>for</code>, <code>map</code> e o operador <code>broadcasting</code>, representado por um ponto <code>"."</code></p></li>
+<li><p>Crie uma figura com seu resultado, usando o pacote <code>Plots.jl</code>.</p></li>
+</ol></li>
+</ol>
+<div class="callout-tip callout callout-style-default callout-captioned">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-caption-container flex-fill">
+Dica
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>Procure por <strong>Trig word problem: modeling annual temperature</strong> na Internet.</p>
+</div>
+</div>
+</section>
+<section id="trigonometria" class="level2" data-number="1.4">
+<h2 data-number="1.4" class="anchored" data-anchor-id="trigonometria"><span class="header-section-number">1.4</span> Trigonometria</h2>
+<p>Computadores são máquinas incríveis para fazer contas, mas ainda sim possuem limites. Vamos testar um deles com o cálculo da função seno.</p>
+<ol start="4" type="1">
+<li>Crie um programa para estimar o valor de <em>sen(x)</em> através de sua expansão de Taylor truncada em <span class="math inline">\(N\)</span> elementos: <span class="math display">\[
+    sin(x) = \sum_{n=0}^{N} (-1)^n \frac{x^{2n+1}}{(2n+1)!}
+\]</span></li>
+</ol>
+<ol type="a">
+<li><p>Escolha um valor de <span class="math inline">\(x\)</span> e calcule a série para <span class="math inline">\(N\)</span> diferentes. Quanto maior <span class="math inline">\(N\)</span>, melhor será seus resultado, e nós desejamos verificar isso exibindo os erro absoluto em um plot de escala logarítmica. Use a biblioteca <code>Plots.jl</code> para isso.</p></li>
+<li><p>Para quais valores de <span class="math inline">\(N\)</span> você não consegue mais realizar a somatória ? Por quê?</p></li>
+</ol>
+<div class="callout-note callout callout-style-default callout-captioned">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-caption-container flex-fill">
+Nota
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>erro absoluto = <span class="math inline">\(|y_{estimado} - y_{exato}|\)</span>.</p>
+<p>Use a função <code>sin(x)</code> que já vem por padrão em Julia para obter o valor exato.</p>
+</div>
+</div>
+</section>
+<section id="resistores-em-série" class="level2" data-number="1.5">
+<h2 data-number="1.5" class="anchored" data-anchor-id="resistores-em-série"><span class="header-section-number">1.5</span> Resistores em Série</h2>
+<p>Será inevitável que você fará uso de pacotes prontos. E é comum em Julia a criação de novos tipos de dados - <code>tipos</code> no sentido <code>Int</code> ou <code>Float</code>. Esse recurso permite que você desenvolva códigos mais inteligível e tudo começa com <code>struct</code>. Nesse exercício criaremos um tipo de dado para ajudar a calcular resistências em série de circuitos elétricos.</p>
+<ol start="5" type="1">
+<li>Defina um <code>struct</code><a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a> chamado <code>resistor</code> com 2 campos do tipo <code>Number</code>: Resistência, <span class="math inline">\(R\)</span> e Corrente, <span class="math inline">\(i\)</span>.</li>
+</ol>
+<ol type="a">
+<li>Instancie 2 resistores em série, com <span class="math inline">\(i = 4A\)</span>, e <span class="math inline">\(R_1 = 5\Omega\)</span> e <span class="math inline">\(R_2 = 20\Omega\)</span>.</li>
+<li>Crie uma função que receba o tipo de entrada <code>resistor</code> e retorne a tensão <span class="math inline">\(U = R\cdot i\)</span>.</li>
+<li>Crie um novo <em>método</em> que some 2 resistências em série e retorne um novo objeto do tipo <code>resistor</code>.</li>
 </ol>
 
 
@@ -188,7 +248,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="footnotes" class="footnotes footnotes-end-of-document" role="doc-endnotes">
 <hr>
 <ol>
-<li id="fn1"><p>Super Dica: Procure por <em>Trig word problem: modeling annual temperature</em> na Internet<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn1"><p>É esperado que você busque na internet por exemplos mínimos de como trabalhar com <code>struct</code>.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
 </section>
 
