--- a/Projeto1/projeto1.html
+++ b/Projeto1/projeto1.html
@@ -85,9 +85,6 @@ ul.task-list li input[type="checkbox"] {
     <div class="pt-lg-2 mt-2 text-left sidebar-header">
     <div class="sidebar-title mb-0 py-0">
       <a href="../">Fiscomp</a> 
-        <div class="sidebar-tools-main">
-    <a href="https://www.facebook.com/sharer/sharer.php?u=|url|" title="Facebook" class="sidebar-tool px-1"><i class="bi bi-facebook"></i></a>
-</div>
     </div>
       </div>
       <div class="mt-2 flex-shrink-0 align-items-center">
@@ -160,7 +157,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="vetores-e-matrizes" class="level2" data-number="1.1">
 <h2 data-number="1.1" class="anchored" data-anchor-id="vetores-e-matrizes"><span class="header-section-number">1.1</span> Vetores e Matrizes</h2>
 <p>É muito difícil você fazer Física sem usar vetores ou matrizes, por isso você precisa dominar operações básicas de Algebra Linear.</p>
-<ol class="example" type="1">
+<ol type="1">
 <li><p>Dados 3 vetores <span class="math inline">\(\vec{a} = (1,-1,1)\)</span>, <span class="math inline">\(\vec{b} = (-3,1,5)\)</span> e <span class="math inline">\(\vec{c} = (4,-7,3)\)</span> :</p>
 <ol type="a">
 <li><p>Calcule a norma (valor absoluto Euclidiano) de cada vetor.</p></li>
@@ -173,7 +170,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="leitura-e-escrita" class="level2" data-number="1.2">
 <h2 data-number="1.2" class="anchored" data-anchor-id="leitura-e-escrita"><span class="header-section-number">1.2</span> Leitura e Escrita</h2>
 <p>Outra tarefa recorrente em programação é leitura de dados em arquivo para posterior análise.</p>
-<ol start="2" class="example" type="1">
+<ol start="2" type="1">
 <li><p>Voltaremos aos tempos de ensino médio, e vamos calcular tempo de queda livre <span class="math inline">\(t_q = \sqrt{2h/g}\)</span>, porém não apenas na Terra.</p>
 <ol type="a">
 <li><p>Pesquise o valor da aceleração da gravidade, <span class="math inline">\(g\)</span>, em diferentes planetas do sistema solar. Salve seus resultados em um arquivo <code>.txt</code>, cuja primeira coluna é o nome do planeta, e na segunda o valor de <span class="math inline">\(g\)</span>. Separe os dados com uma vírgula.</p></li>
@@ -186,7 +183,7 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="estrutura-de-repetição" class="level2" data-number="1.3">
 <h2 data-number="1.3" class="anchored" data-anchor-id="estrutura-de-repetição"><span class="header-section-number">1.3</span> Estrutura de Repetição</h2>
-<ol start="3" class="example" type="1">
+<ol start="3" type="1">
 <li><p>Ignorando um gama gigantesca de fatores, vamos assumir, o cenário irrealístico, de que a temperatura anual de uma cidade na região Sudeste do Brasil é descrito por uma função cosseno, cuja miníma anual é 5°, e máxima anual é 35°, acontecendo no primeiro dia do Verão, dia 21 de dezembro (que corresponde ao 355° dia do ano).</p>
 <ol type="a">
 <li><p>Crie uma função que simule o comportamento de temperatura anual.</p></li>
@@ -196,62 +193,56 @@ ul.task-list li input[type="checkbox"] {
 </ol></li>
 </ol>
 <div class="callout-tip callout callout-style-default callout-captioned">
-<div class="callout-header d-flex align-content-center" data-bs-toggle="collapse" data-bs-target=".callout-1-contents" aria-controls="callout-1" aria-expanded="false" aria-label="Toggle callout">
+<div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
 <i class="callout-icon"></i>
 </div>
 <div class="callout-caption-container flex-fill">
 Dica
 </div>
-<div class="callout-btn-toggle d-inline-block border-0 py-1 ps-1 pe-0 float-end"><i class="callout-toggle"></i></div>
 </div>
-<div id="callout-1" class="callout-1-contents callout-collapse collapse">
 <div class="callout-body-container callout-body">
 <p>Procure por <strong>Trig word problem: modeling annual temperature</strong> na Internet.</p>
-</div>
 </div>
 </div>
 </section>
 <section id="trigonometria" class="level2" data-number="1.4">
 <h2 data-number="1.4" class="anchored" data-anchor-id="trigonometria"><span class="header-section-number">1.4</span> Trigonometria</h2>
 <p>Computadores são máquinas incríveis para fazer contas, mas ainda sim possuem limites. Vamos testar um deles com o cálculo da função seno.</p>
-<ol start="4" class="example" type="1">
+<ol start="4" type="1">
 <li>Crie um programa para estimar o valor de <em>sen(x)</em> através de sua expansão de Taylor truncada em <span class="math inline">\(N\)</span> elementos: <span class="math display">\[
-   sin(x) = \sum_{n=0}^{N} (-1)^n \frac{x^{2n+1}}{(2n+1)!}
-\]</span>
+    sin(x) = \sum_{n=0}^{N} (-1)^n \frac{x^{2n+1}}{(2n+1)!}
+\]</span></li>
+</ol>
 <ol type="a">
 <li><p>Escolha um valor de <span class="math inline">\(x\)</span> e calcule a série para <span class="math inline">\(N\)</span> diferentes. Quanto maior <span class="math inline">\(N\)</span>, melhor será seus resultado, e nós desejamos verificar isso exibindo os erro absoluto em um plot de escala logarítmica. Use a biblioteca <code>Plots.jl</code> para isso.</p></li>
 <li><p>Para quais valores de <span class="math inline">\(N\)</span> você não consegue mais realizar a somatória ? Por quê?</p></li>
-</ol></li>
 </ol>
 <div class="callout-note callout callout-style-default callout-captioned">
-<div class="callout-header d-flex align-content-center" data-bs-toggle="collapse" data-bs-target=".callout-2-contents" aria-controls="callout-2" aria-expanded="false" aria-label="Toggle callout">
+<div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
 <i class="callout-icon"></i>
 </div>
 <div class="callout-caption-container flex-fill">
-Observação
+Nota
 </div>
-<div class="callout-btn-toggle d-inline-block border-0 py-1 ps-1 pe-0 float-end"><i class="callout-toggle"></i></div>
 </div>
-<div id="callout-2" class="callout-2-contents callout-collapse collapse">
 <div class="callout-body-container callout-body">
 <p>erro absoluto = <span class="math inline">\(|y_{estimado} - y_{exato}|\)</span>.</p>
 <p>Use a função <code>sin(x)</code> que já vem por padrão em Julia para obter o valor exato.</p>
-</div>
 </div>
 </div>
 </section>
 <section id="resistores-em-série" class="level2" data-number="1.5">
 <h2 data-number="1.5" class="anchored" data-anchor-id="resistores-em-série"><span class="header-section-number">1.5</span> Resistores em Série</h2>
 <p>Será inevitável que você fará uso de pacotes prontos. E é comum em Julia a criação de novos tipos de dados - <code>tipos</code> no sentido <code>Int</code> ou <code>Float</code>. Esse recurso permite que você desenvolva códigos mais inteligível e tudo começa com <code>struct</code>. Nesse exercício criaremos um tipo de dado para ajudar a calcular resistências em série de circuitos elétricos.</p>
-<ol start="5" class="example" type="1">
-<li>Defina um <code>struct</code><a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a> chamado <code>resistor</code> com 2 campos do tipo <code>Number</code>: Resistência, <span class="math inline">\(R\)</span> e Corrente, <span class="math inline">\(i\)</span>.
+<ol start="5" type="1">
+<li>Defina um <code>struct</code><a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a> chamado <code>resistor</code> com 2 campos do tipo <code>Number</code>: Resistência, <span class="math inline">\(R\)</span> e Corrente, <span class="math inline">\(i\)</span>.</li>
+</ol>
 <ol type="a">
 <li>Instancie 2 resistores em série, com <span class="math inline">\(i = 4A\)</span>, e <span class="math inline">\(R_1 = 5\Omega\)</span> e <span class="math inline">\(R_2 = 20\Omega\)</span>.</li>
 <li>Crie uma função que receba o tipo de entrada <code>resistor</code> e retorne a tensão <span class="math inline">\(U = R\cdot i\)</span>.</li>
 <li>Crie um novo <em>método</em> que some 2 resistências em série e retorne um novo objeto do tipo <code>resistor</code>.</li>
-</ol></li>
 </ol>
 
 
