--- a/index.html
+++ b/index.html
@@ -85,9 +85,6 @@ ul.task-list li input[type="checkbox"] {
     <div class="pt-lg-2 mt-2 text-left sidebar-header">
     <div class="sidebar-title mb-0 py-0">
       <a href="./">Fiscomp</a> 
-        <div class="sidebar-tools-main">
-    <a href="https://www.facebook.com/sharer/sharer.php?u=|url|" title="Facebook" class="sidebar-tool px-1"><i class="bi bi-facebook"></i></a>
-</div>
     </div>
       </div>
       <div class="mt-2 flex-shrink-0 align-items-center">
@@ -105,6 +102,11 @@ ul.task-list li input[type="checkbox"] {
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./Projeto1/projeto1.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">1</span>&nbsp; <span class="chapter-title">Aquecimento</span></a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Projeto2/projeto2.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">2</span>&nbsp; <span class="chapter-title">Tratamento de Dados</span></a>
   </div>
 </li>
         <li class="sidebar-item">
